# Media-Player

./: CMakeLists.txt  main.cpp  resources.qrc
Design/: Architecture.drawio  MediaPlayerUC.drawio
Design/1. RequirementAnalysis/English/: Requirements.md  SoftwareRequirementSpecification.md  UseCase.md  UseCaseSpecification.md
Design/1. RequirementAnalysis/Vietnamese/: Requirements.md  SoftwareRequirementSpecification.md  UseCase.md  UseCaseSpecification.md
Source/: CMakeLists.txt
Source/Controller/: AppController.cpp  AppController.hpp  CMakeLists.txt  ManagementController.cpp  ManagementController.hpp  MediaFileManagementController.cpp  MediaFileManagementController.hpp  PlaybackController.cpp  PlaybackController.hpp  PlaylistController.cpp  PlaylistController.hpp  PlaylistManagementController.cpp  PlaylistManagementController.hpp
Source/Model/: CMakeLists.txt  MediaFile.cpp  MediaFile.hpp  Playlist.cpp  Playlist.hpp  PlaylistManager.cpp  PlaylistManager.hpp
Source/View/: LoginView.qml  Main.qml  MediaFileView.qml  MediaPlayerView.qml  PlaylistView.qml  RegisterView.qml
Source/View/Components/: HoverButton.qml
